2010-11-03  Adrienne Walker  <enne@google.com>

Reviewed by Kenneth Russell.

        Properly return empty strings instead of null when using invalid
        objects for some WebGL calls.  This fixes issues caused by r71274.
        https://bugs.webkit.org/show_bug.cgi?id=48962

        * html/canvas/WebGLRenderingContext.cpp:
        (WebCore::WebGLRenderingContext::getProgramInfoLog):
        (WebCore::WebGLRenderingContext::getShaderInfoLog):
        (WebCore::WebGLRenderingContext::getShaderSource):
2010-11-03  Adrienne Walker  <enne@google.com>

        Reviewed by Kenneth Russell.

        WebGL spec doesn't specify whether the return from getAttachedShaders
        can be undefined or null.  Tolerate both.
        https://bugs.webkit.org/show_bug.cgi?id=48962

        * fast/canvas/webgl/gl-object-get-calls-expected.txt:
        * fast/canvas/webgl/gl-object-get-calls.html:


Canonical link: https://commits.webkit.org/61778@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71289 268f45cc-cd09-0410-ab3c-d52691b4dbfc